// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallationConfirmationModal should match a snapshot when an uninstallation is requested 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Are you sure you wish to uninstall 
        TEST APP
        ? This action will uninstall the app for 
        <b>
          all
        </b>
         members of your organisation, and for all office groups.
      </p>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-right el-button-group-inner"
        >
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Are you sure you wish to uninstall 
      TEST APP
      ? This action will uninstall the app for 
      <b>
        all
      </b>
       members of your organisation, and for all office groups.
    </p>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-right el-button-group-inner"
      >
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallationConfirmationModal should match a snapshot when the install type is SPECIFIC_OFFICE_GROUPS 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Please confirm that you wish to action the following with this app:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Installation for 
        1
         office group
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Uninstallation for 
        1
         office group
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        If you are uncertain, please cancel and look at the information located on the app listing.
      </p>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-right el-button-group-inner"
        >
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Please confirm that you wish to action the following with this app:
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Installation for 
      1
       office group
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Uninstallation for 
      1
       office group
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      If you are uncertain, please cancel and look at the information located on the app listing.
    </p>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-right el-button-group-inner"
      >
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallationConfirmationModal should match a snapshot when the install type is WHOLE_ORG 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By confirming this installation, you are granting this app access to all data inside of your organisation and all users and offices will have access to this app inside of the AppMarket.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        If you are uncertain, please cancel and look at the information located on the app listing.
      </p>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-right el-button-group-inner"
        >
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      By confirming this installation, you are granting this app access to all data inside of your organisation and all users and offices will have access to this app inside of the AppMarket.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      If you are uncertain, please cancel and look at the information located on the app listing.
    </p>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-right el-button-group-inner"
      >
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
